// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test assign nodes to one worker 1`] = `
[
  {
    "id": "pHLLUDEbR7XLI6xom",
    "name": [
      "events",
      "input",
      "load",
      "docs",
      "pdf",
      "PDFLoader",
    ],
  },
  {
    "id": "YKMR86cWjFjL6Kce4",
    "name": [
      "events",
      "input",
      "transform",
      "splitter",
      "TextSplitter",
    ],
  },
]
`;

exports[`test assign nodes to one worker 2`] = `
[
  [
    "YKMR86cWjFjL6Kce4",
  ],
]
`;

exports[`test assign nodes to one worker 3`] = `[]`;

exports[`test assign nodes to two workers 1`] = `
[
  {
    "id": "ulsgrvBv6KSQpVXED",
    "name": [
      "events",
      "input",
      "load",
      "docs",
      "pdf",
      "PDFLoader",
    ],
  },
  {
    "id": "2m4Xn9iM_oElCgqW0",
    "name": [
      "events",
      "input",
      "transform",
      "splitter",
      "TextSplitter",
    ],
  },
  {
    "id": "Z4aa6Ep6IX8vD80K0",
    "name": [
      "events",
      "input",
      "load",
      "docs",
      "pdf",
      "PDFLoader",
    ],
  },
  {
    "id": "yVsCNtjTl3GRcgHzm",
    "name": [
      "events",
      "input",
      "transform",
      "splitter",
      "TextSplitter",
    ],
  },
]
`;

exports[`test assign nodes to two workers 2`] = `
[
  [
    "2m4Xn9iM_oElCgqW0",
  ],
  [
    "yVsCNtjTl3GRcgHzm",
  ],
]
`;

exports[`test assign nodes to two workers 3`] = `
[
  "2m4Xn9iM_oElCgqW0",
  "ulsgrvBv6KSQpVXED",
]
`;
